<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/planoverde"
    android:orientation="vertical">


        <ImageView
        android:id="@+id/imageView"
        android:layout_width="399dp"
        android:layout_height="92dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/zoologia" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="246dp"
        android:layout_height="190dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/caracol" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="106dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="202dp"
        android:layout_marginRight="202dp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:text="Login:"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0E2501"
        app:layout_constraintBottom_toTopOf="@+id/EmailCadastroId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/telainicial" />

    <EditText
        android:id="@+id/EmailCadastroId"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="78dp"
        android:layout_marginRight="78dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/background_light"
        android:drawableLeft="@drawable/ic_action_person"
        android:ems="10"
        android:hint="@string/info1"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/SenhaCadastroId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/SenhaCadastroId"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="78dp"
        android:layout_marginRight="78dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/background_light"
        android:drawableLeft="@drawable/ic_action_lock"
        android:ems="10"
        android:hint="@string/info2"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/EntrarId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/EntrarId"
        android:layout_width="127dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="181dp"
        android:layout_marginRight="181dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Login"
        app:layout_constraintBottom_toTopOf="@+id/CadastroId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/CadastroId"
        android:layout_width="127dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="181dp"
        android:layout_marginRight="181dp"
        android:layout_marginBottom="80dp"
        android:text="@string/Inscrição"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />



</android.support.constraint.ConstraintLayout>